[package]
name = "pokoebox-player"
version = "0.1.0"
authors = ["Tim Visée <3a4fb3964f@sinenomine.email>"]
license = "GPL-3.0"
readme = "../README.md"
homepage = "https://gitlab.com/timvisee/pokoebox"
repository = "https://gitlab.com/timvisee/pokoebox"
description = "Portable media center boombox project"
edition = "2018"

[badges]
gitlab = { repository = "timvisee/ffsend", branch = "master" }

[dependencies]
gtk = { version = "0.8", features = ["v3_16"] }
log = "0.4"
simple_logger = "1.0"
version-compare = "0.0.10"

# GPIO on Raspberry Pi
cupi = { version = "0.1", optional = true }

[features]
default = []

# Raspberry Pi features, such as GPIO usage and support for external devices.
# Will compile, but won't run if not running on a Raspberry Pi board.
rpi = ["cupi"]
