[package]
name = "pokoebox-player"
version = "0.1.0"
authors = ["Tim Visée <3a4fb3964f@sinenomine.email>"]
license = "GPL-3.0"
readme = "../README.md"
homepage = "https://gitlab.com/timvisee/pokoebox"
repository = "https://gitlab.com/timvisee/pokoebox"
description = "Portable media center boombox project"
edition = "2018"

[badges]
gitlab = { repository = "timvisee/ffsend", branch = "master" }

[dependencies]
chrono = "0.4"
glib = { version = "0.9", features = ["v2_44"] }
gtk = { version = "0.8", features = ["v3_16"] }
log = "0.4"
pokoebox-bluetooth = { version = "*", path = "../pokoebox-bluetooth", optional = true }
simple_logger = "1.0"
version-compare = "0.0.10"

[features]
default = ["bluetooth"]

# Feature: bluetooth control for audio
bluetooth = ["pokoebox-bluetooth"]
